jaml/examples/invalid/inline_map_nl.jaml
# Braced-maps are allowed in YAML, but not JAML.
inline_map_nl: {
  a: 1, 
  b: 2, 
  c: 3
}
